fix: Update text colour to stop visibility issues

--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,8 @@ body {
 }
 
 .text-neutral-950 {
-    color: #ffffff;
+    color: #ffb614ff;
+}
+.text-neutral-400 {
+    color: #000000;
 }
